# wc-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cargo.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
scripts/: benchmark.sh  release.sh
src/: main.rs
tests/: integration_tests.rs
tests/data/: generate_large.sh  small.txt  whitespace.txt
